[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/star1.png" type="Texture" id=1]
[ext_resource path="res://src/Star.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 23, 23 )

[node name="Star" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="StarTexture" type="Sprite" parent="."]
position = Vector2( 0, 1 )
texture = ExtResource( 1 )

[node name="collision" type="CollisionShape2D" parent="."]
scale = Vector2( 2, 2 )
shape = SubResource( 2 )

[node name="area1" type="Area2D" parent="." groups=["star"]]

[node name="shape1" type="CollisionShape2D" parent="area1"]
modulate = Color( 0.101961, 1, 0, 1 )
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
